// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`frozen Pi project-trust terminal visuals > dark at 40 columns 1`] = `
{
  "ansi": [
    "[?2026h[38;2;95;135;255m────────────────────────────────────────[39m[0m]8;;
[0m]8;;
 [38;2;138;190;183mProject trust[39m                          [0m]8;;
 [38;2;128;128;128m/project[39m                               [0m]8;;
[0m]8;;
 [38;2;128;128;128mSaved decision: none[39m                   [0m]8;;
 [38;2;128;128;128mCurrent session: untrusted[39m             [0m]8;;
[0m]8;;
 [38;2;138;190;183m→ [39m  [38;2;138;190;183mTrust[39m                              [0m]8;;
     [38;2;212;212;212mTrust parent folder (/)[39m            [0m]8;;
     [38;2;212;212;212mDo not trust[39m                       [0m]8;;
[0m]8;;
 [38;2;102;102;102m↑↓[39m[38;2;128;128;128m navigate[39m  [38;2;102;102;102menter[39m[38;2;128;128;128m save[39m  [38;2;102;102;102mescape/ctrl+c [0m]8;;
 [38;2;102;102;102m[39m[38;2;128;128;128m cancel[39m                                [0m]8;;
[0m]8;;
[38;2;95;135;255m────────────────────────────────────────[39m[0m]8;;[?2026l",
    "[?2026h[7A
[2K     [38;2;212;212;212mTrust[39m                              [0m]8;;
[2K     [38;2;212;212;212mTrust parent folder (/)[39m            [0m]8;;
[2K [38;2;138;190;183m→ [39m  [38;2;138;190;183mDo not trust[39m                       [0m]8;;[?2026l",
  ],
  "declineSelected": {
    "cursor": {
      "x": 40,
      "y": 10,
    },
    "viewport": [
      "────────────────────────────────────────",
      "",
      " Project trust                          ",
      " /project                               ",
      "",
      " Saved decision: none                   ",
      " Current session: untrusted             ",
      "",
      "     Trust                              ",
      "     Trust parent folder (/)            ",
      " →   Do not trust                       ",
      "",
      " ↑↓ navigate  enter save  escape/ctrl+c ",
      "  cancel                                ",
      "",
      "────────────────────────────────────────",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "theme": "dark",
  "trustSelected": {
    "cursor": {
      "x": 40,
      "y": 15,
    },
    "viewport": [
      "────────────────────────────────────────",
      "",
      " Project trust                          ",
      " /project                               ",
      "",
      " Saved decision: none                   ",
      " Current session: untrusted             ",
      "",
      " →   Trust                              ",
      "     Trust parent folder (/)            ",
      "     Do not trust                       ",
      "",
      " ↑↓ navigate  enter save  escape/ctrl+c ",
      "  cancel                                ",
      "",
      "────────────────────────────────────────",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "width": 40,
}
`;

exports[`frozen Pi project-trust terminal visuals > dark at 80 columns 1`] = `
{
  "ansi": [
    "[?2026h[38;2;95;135;255m────────────────────────────────────────────────────────────────────────────────[39m[0m]8;;
[0m]8;;
 [38;2;138;190;183mProject trust[39m                                                                  [0m]8;;
 [38;2;128;128;128m/project[39m                                                                       [0m]8;;
[0m]8;;
 [38;2;128;128;128mSaved decision: none[39m                                                           [0m]8;;
 [38;2;128;128;128mCurrent session: untrusted[39m                                                     [0m]8;;
[0m]8;;
 [38;2;138;190;183m→ [39m  [38;2;138;190;183mTrust[39m                                                                      [0m]8;;
     [38;2;212;212;212mTrust parent folder (/)[39m                                                    [0m]8;;
     [38;2;212;212;212mDo not trust[39m                                                               [0m]8;;
[0m]8;;
 [38;2;102;102;102m↑↓[39m[38;2;128;128;128m navigate[39m  [38;2;102;102;102menter[39m[38;2;128;128;128m save[39m  [38;2;102;102;102mescape/ctrl+c[39m[38;2;128;128;128m cancel[39m                                  [0m]8;;
[0m]8;;
[38;2;95;135;255m────────────────────────────────────────────────────────────────────────────────[39m[0m]8;;[?2026l",
    "[?2026h[6A
[2K     [38;2;212;212;212mTrust[39m                                                                      [0m]8;;
[2K     [38;2;212;212;212mTrust parent folder (/)[39m                                                    [0m]8;;
[2K [38;2;138;190;183m→ [39m  [38;2;138;190;183mDo not trust[39m                                                               [0m]8;;[?2026l",
  ],
  "declineSelected": {
    "cursor": {
      "x": 80,
      "y": 10,
    },
    "viewport": [
      "────────────────────────────────────────────────────────────────────────────────",
      "",
      " Project trust                                                                  ",
      " /project                                                                       ",
      "",
      " Saved decision: none                                                           ",
      " Current session: untrusted                                                     ",
      "",
      "     Trust                                                                      ",
      "     Trust parent folder (/)                                                    ",
      " →   Do not trust                                                               ",
      "",
      " ↑↓ navigate  enter save  escape/ctrl+c cancel                                  ",
      "",
      "────────────────────────────────────────────────────────────────────────────────",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "theme": "dark",
  "trustSelected": {
    "cursor": {
      "x": 80,
      "y": 14,
    },
    "viewport": [
      "────────────────────────────────────────────────────────────────────────────────",
      "",
      " Project trust                                                                  ",
      " /project                                                                       ",
      "",
      " Saved decision: none                                                           ",
      " Current session: untrusted                                                     ",
      "",
      " →   Trust                                                                      ",
      "     Trust parent folder (/)                                                    ",
      "     Do not trust                                                               ",
      "",
      " ↑↓ navigate  enter save  escape/ctrl+c cancel                                  ",
      "",
      "────────────────────────────────────────────────────────────────────────────────",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "width": 80,
}
`;

exports[`frozen Pi project-trust terminal visuals > dark at 120 columns 1`] = `
{
  "ansi": [
    "[?2026h[38;2;95;135;255m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[0m]8;;
[0m]8;;
 [38;2;138;190;183mProject trust[39m                                                                                                          [0m]8;;
 [38;2;128;128;128m/project[39m                                                                                                               [0m]8;;
[0m]8;;
 [38;2;128;128;128mSaved decision: none[39m                                                                                                   [0m]8;;
 [38;2;128;128;128mCurrent session: untrusted[39m                                                                                             [0m]8;;
[0m]8;;
 [38;2;138;190;183m→ [39m  [38;2;138;190;183mTrust[39m                                                                                                              [0m]8;;
     [38;2;212;212;212mTrust parent folder (/)[39m                                                                                            [0m]8;;
     [38;2;212;212;212mDo not trust[39m                                                                                                       [0m]8;;
[0m]8;;
 [38;2;102;102;102m↑↓[39m[38;2;128;128;128m navigate[39m  [38;2;102;102;102menter[39m[38;2;128;128;128m save[39m  [38;2;102;102;102mescape/ctrl+c[39m[38;2;128;128;128m cancel[39m                                                                          [0m]8;;
[0m]8;;
[38;2;95;135;255m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[0m]8;;[?2026l",
    "[?2026h[6A
[2K     [38;2;212;212;212mTrust[39m                                                                                                              [0m]8;;
[2K     [38;2;212;212;212mTrust parent folder (/)[39m                                                                                            [0m]8;;
[2K [38;2;138;190;183m→ [39m  [38;2;138;190;183mDo not trust[39m                                                                                                       [0m]8;;[?2026l",
  ],
  "declineSelected": {
    "cursor": {
      "x": 120,
      "y": 10,
    },
    "viewport": [
      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────",
      "",
      " Project trust                                                                                                          ",
      " /project                                                                                                               ",
      "",
      " Saved decision: none                                                                                                   ",
      " Current session: untrusted                                                                                             ",
      "",
      "     Trust                                                                                                              ",
      "     Trust parent folder (/)                                                                                            ",
      " →   Do not trust                                                                                                       ",
      "",
      " ↑↓ navigate  enter save  escape/ctrl+c cancel                                                                          ",
      "",
      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "theme": "dark",
  "trustSelected": {
    "cursor": {
      "x": 120,
      "y": 14,
    },
    "viewport": [
      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────",
      "",
      " Project trust                                                                                                          ",
      " /project                                                                                                               ",
      "",
      " Saved decision: none                                                                                                   ",
      " Current session: untrusted                                                                                             ",
      "",
      " →   Trust                                                                                                              ",
      "     Trust parent folder (/)                                                                                            ",
      "     Do not trust                                                                                                       ",
      "",
      " ↑↓ navigate  enter save  escape/ctrl+c cancel                                                                          ",
      "",
      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "width": 120,
}
`;

exports[`frozen Pi project-trust terminal visuals > light at 40 columns 1`] = `
{
  "ansi": [
    "[?2026h[38;2;84;125;167m────────────────────────────────────────[39m[0m]8;;
[0m]8;;
 [38;2;90;128;128mProject trust[39m                          [0m]8;;
 [38;2;108;108;108m/project[39m                               [0m]8;;
[0m]8;;
 [38;2;108;108;108mSaved decision: none[39m                   [0m]8;;
 [38;2;108;108;108mCurrent session: untrusted[39m             [0m]8;;
[0m]8;;
 [38;2;90;128;128m→ [39m  [38;2;90;128;128mTrust[39m                              [0m]8;;
     [38;2;31;35;40mTrust parent folder (/)[39m            [0m]8;;
     [38;2;31;35;40mDo not trust[39m                       [0m]8;;
[0m]8;;
 [38;2;118;118;118m↑↓[39m[38;2;108;108;108m navigate[39m  [38;2;118;118;118menter[39m[38;2;108;108;108m save[39m  [38;2;118;118;118mescape/ctrl+c [0m]8;;
 [38;2;118;118;118m[39m[38;2;108;108;108m cancel[39m                                [0m]8;;
[0m]8;;
[38;2;84;125;167m────────────────────────────────────────[39m[0m]8;;[?2026l",
    "[?2026h[7A
[2K     [38;2;31;35;40mTrust[39m                              [0m]8;;
[2K     [38;2;31;35;40mTrust parent folder (/)[39m            [0m]8;;
[2K [38;2;90;128;128m→ [39m  [38;2;90;128;128mDo not trust[39m                       [0m]8;;[?2026l",
  ],
  "declineSelected": {
    "cursor": {
      "x": 40,
      "y": 10,
    },
    "viewport": [
      "────────────────────────────────────────",
      "",
      " Project trust                          ",
      " /project                               ",
      "",
      " Saved decision: none                   ",
      " Current session: untrusted             ",
      "",
      "     Trust                              ",
      "     Trust parent folder (/)            ",
      " →   Do not trust                       ",
      "",
      " ↑↓ navigate  enter save  escape/ctrl+c ",
      "  cancel                                ",
      "",
      "────────────────────────────────────────",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "theme": "light",
  "trustSelected": {
    "cursor": {
      "x": 40,
      "y": 15,
    },
    "viewport": [
      "────────────────────────────────────────",
      "",
      " Project trust                          ",
      " /project                               ",
      "",
      " Saved decision: none                   ",
      " Current session: untrusted             ",
      "",
      " →   Trust                              ",
      "     Trust parent folder (/)            ",
      "     Do not trust                       ",
      "",
      " ↑↓ navigate  enter save  escape/ctrl+c ",
      "  cancel                                ",
      "",
      "────────────────────────────────────────",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "width": 40,
}
`;

exports[`frozen Pi project-trust terminal visuals > light at 80 columns 1`] = `
{
  "ansi": [
    "[?2026h[38;2;84;125;167m────────────────────────────────────────────────────────────────────────────────[39m[0m]8;;
[0m]8;;
 [38;2;90;128;128mProject trust[39m                                                                  [0m]8;;
 [38;2;108;108;108m/project[39m                                                                       [0m]8;;
[0m]8;;
 [38;2;108;108;108mSaved decision: none[39m                                                           [0m]8;;
 [38;2;108;108;108mCurrent session: untrusted[39m                                                     [0m]8;;
[0m]8;;
 [38;2;90;128;128m→ [39m  [38;2;90;128;128mTrust[39m                                                                      [0m]8;;
     [38;2;31;35;40mTrust parent folder (/)[39m                                                    [0m]8;;
     [38;2;31;35;40mDo not trust[39m                                                               [0m]8;;
[0m]8;;
 [38;2;118;118;118m↑↓[39m[38;2;108;108;108m navigate[39m  [38;2;118;118;118menter[39m[38;2;108;108;108m save[39m  [38;2;118;118;118mescape/ctrl+c[39m[38;2;108;108;108m cancel[39m                                  [0m]8;;
[0m]8;;
[38;2;84;125;167m────────────────────────────────────────────────────────────────────────────────[39m[0m]8;;[?2026l",
    "[?2026h[6A
[2K     [38;2;31;35;40mTrust[39m                                                                      [0m]8;;
[2K     [38;2;31;35;40mTrust parent folder (/)[39m                                                    [0m]8;;
[2K [38;2;90;128;128m→ [39m  [38;2;90;128;128mDo not trust[39m                                                               [0m]8;;[?2026l",
  ],
  "declineSelected": {
    "cursor": {
      "x": 80,
      "y": 10,
    },
    "viewport": [
      "────────────────────────────────────────────────────────────────────────────────",
      "",
      " Project trust                                                                  ",
      " /project                                                                       ",
      "",
      " Saved decision: none                                                           ",
      " Current session: untrusted                                                     ",
      "",
      "     Trust                                                                      ",
      "     Trust parent folder (/)                                                    ",
      " →   Do not trust                                                               ",
      "",
      " ↑↓ navigate  enter save  escape/ctrl+c cancel                                  ",
      "",
      "────────────────────────────────────────────────────────────────────────────────",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "theme": "light",
  "trustSelected": {
    "cursor": {
      "x": 80,
      "y": 14,
    },
    "viewport": [
      "────────────────────────────────────────────────────────────────────────────────",
      "",
      " Project trust                                                                  ",
      " /project                                                                       ",
      "",
      " Saved decision: none                                                           ",
      " Current session: untrusted                                                     ",
      "",
      " →   Trust                                                                      ",
      "     Trust parent folder (/)                                                    ",
      "     Do not trust                                                               ",
      "",
      " ↑↓ navigate  enter save  escape/ctrl+c cancel                                  ",
      "",
      "────────────────────────────────────────────────────────────────────────────────",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "width": 80,
}
`;

exports[`frozen Pi project-trust terminal visuals > light at 120 columns 1`] = `
{
  "ansi": [
    "[?2026h[38;2;84;125;167m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[0m]8;;
[0m]8;;
 [38;2;90;128;128mProject trust[39m                                                                                                          [0m]8;;
 [38;2;108;108;108m/project[39m                                                                                                               [0m]8;;
[0m]8;;
 [38;2;108;108;108mSaved decision: none[39m                                                                                                   [0m]8;;
 [38;2;108;108;108mCurrent session: untrusted[39m                                                                                             [0m]8;;
[0m]8;;
 [38;2;90;128;128m→ [39m  [38;2;90;128;128mTrust[39m                                                                                                              [0m]8;;
     [38;2;31;35;40mTrust parent folder (/)[39m                                                                                            [0m]8;;
     [38;2;31;35;40mDo not trust[39m                                                                                                       [0m]8;;
[0m]8;;
 [38;2;118;118;118m↑↓[39m[38;2;108;108;108m navigate[39m  [38;2;118;118;118menter[39m[38;2;108;108;108m save[39m  [38;2;118;118;118mescape/ctrl+c[39m[38;2;108;108;108m cancel[39m                                                                          [0m]8;;
[0m]8;;
[38;2;84;125;167m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[0m]8;;[?2026l",
    "[?2026h[6A
[2K     [38;2;31;35;40mTrust[39m                                                                                                              [0m]8;;
[2K     [38;2;31;35;40mTrust parent folder (/)[39m                                                                                            [0m]8;;
[2K [38;2;90;128;128m→ [39m  [38;2;90;128;128mDo not trust[39m                                                                                                       [0m]8;;[?2026l",
  ],
  "declineSelected": {
    "cursor": {
      "x": 120,
      "y": 10,
    },
    "viewport": [
      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────",
      "",
      " Project trust                                                                                                          ",
      " /project                                                                                                               ",
      "",
      " Saved decision: none                                                                                                   ",
      " Current session: untrusted                                                                                             ",
      "",
      "     Trust                                                                                                              ",
      "     Trust parent folder (/)                                                                                            ",
      " →   Do not trust                                                                                                       ",
      "",
      " ↑↓ navigate  enter save  escape/ctrl+c cancel                                                                          ",
      "",
      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "theme": "light",
  "trustSelected": {
    "cursor": {
      "x": 120,
      "y": 14,
    },
    "viewport": [
      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────",
      "",
      " Project trust                                                                                                          ",
      " /project                                                                                                               ",
      "",
      " Saved decision: none                                                                                                   ",
      " Current session: untrusted                                                                                             ",
      "",
      " →   Trust                                                                                                              ",
      "     Trust parent folder (/)                                                                                            ",
      "     Do not trust                                                                                                       ",
      "",
      " ↑↓ navigate  enter save  escape/ctrl+c cancel                                                                          ",
      "",
      "────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  },
  "width": 120,
}
`;
